hphp/hack/test/deregister/test_function.php.exp
File "test_function.php", line 4, characters 3-6:
Unbound name: `trim` (a global function) (Naming[2049])
File "test_function.php", line 4, characters 3-6:
Unbound name (typing): `trim` (Typing[4107])
