hphp/hack/test/deregister/test_function.php
<?hh // strict

<<__PHPStdLib>>
function ignored() : void {

}

function test () : void {
  ignored();

}
